fix whitespace

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -5,11 +5,11 @@
   cursor: pointer;
   width: 100%;
   overflow: hidden;
-  height: 75vh;
 }
 
 .card {
   cursor: pointer;
+
 }
 
 .database-reset-button {
@@ -63,6 +63,7 @@ span.stars span {
 
 .card-image {
   width: 100%;
+  height: 40vh;
 }
 
 .nav-bar-logo {
